popup-links.css : padding tweaks
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9708 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -20,7 +20,7 @@ ul.ft-popup-list {
 	z-index: 10000;
 	list-style-type: none;
 	margin:0px;
-	padding:5px;
+	padding: 3px 2px 3px 2px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
