htev-prediction.css : Styling
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9732 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/htev-prediction.css
+++ b/content/resources/css/htev-prediction.css
@@ -57,7 +57,7 @@ div.ft-htev-popup {
 }
 
 .ft-htev-nav a {
-	color: white;
+	color: white !important; 
 	text-decoration: none;
 	display: block;
 	padding:  7px 30px;
@@ -72,7 +72,7 @@ div.ft-htev-popup {
 	display: block !important;
 }
 .ft-htev-popup th, .ft-htev-popup td {
-	text-align: center;
+	text-align: center !important;
 }
 
 .ft-htev-icon {
