htev-prediction : only on valid links for real and forgotten some styling when displaying text
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9734 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/htev-prediction.css
+++ b/content/resources/css/htev-prediction.css
@@ -71,7 +71,7 @@ div.ft-htev-popup {
 .ft-popup-span:hover div.ft-htev-popup {
 	display: block !important;
 }
-.ft-htev-popup th, .ft-htev-popup td {
+.ft-htev-popup th, .ft-htev-popup td, .ft-htev-popup div {
 	text-align: center !important;
 }
 
