friendly-pool: missing parts and some tweaking (guess work)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9750 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/user-content-example.css
+++ b/content/resources/css/user-content-example.css
@@ -315,4 +315,10 @@ background: none repeat scroll 0 0 white !important;
 font-weight: bold !important;
 }  
 
+/* friendly pool colors */
+.ft-home {background-color:#FC0 !important;} /* played home */
+.ft-away {background-color:#F74 !important;} /* played away */
+.ft-home.ft-away {background-color:#7F0 !important;} /*played both */
+.ft-own {background-color:#DDD !important;} /* own country */
+
 }
