--- a/content/resources/css/htev-prediction.css
+++ b/content/resources/css/htev-prediction.css
@@ -1,6 +1,6 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-div.ft-htev-popup {
+html[data-theme="standard"] div.ft-htev-popup {
 	display: none;
 	position: absolute;
 	border: solid 2px #838383;
@@ -11,14 +11,29 @@ div.ft-htev-popup {
 	list-style-type: none;
 	margin:0px;
 	padding: 3px 2px 3px 2px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
 	font: normal .8em/1.5em Ariel, Helvetica, sans-serif;
 	background-color: #EAEAEA;
 	color: #666;
 } 
-.ft-htev-nav {
+html[data-theme="simple"] div.ft-htev-popup {
+	display: none;
+	position: absolute;
+	border: solid 2px #838383;
+	left: -80px;
+	bottom:	12px;
+	padding: 5px;
+	z-index: 10000;
+	list-style-type: none;
+	margin:0px;
+	padding: 3px 2px 3px 2px;
+	font: normal .8em/1.5em Ariel, Helvetica, sans-serif;
+	background-color: #EAEAEA;
+	color: #666;	
+}
+html[data-theme="standard"] .ft-htev-nav {
 	margin: 0px;
 	height: 22px;
 	border-radius: 4px;
@@ -33,8 +48,19 @@ div.ft-htev-popup {
     background-image: -o-linear-gradient(#838383 ,#707070 50%,#5E5E5E  51%,#787878);
     background-color: #5f5f5f; /* Fallback */
 }
+html[data-theme="simple"] .ft-htev-nav {
+	margin: 0px;
+	height: 22px;
+	-webkit-box-shadow: 0px 3px 3px #acacac;
+	-moz-box-shadow: 0px 3px 3px #acacac;
+	box-shadow: 0 3px 3px #acacac;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #787878), color-stop(0.5, #5E5E5E), color-stop(0.51, #707070), color-stop(1, #838383));
+    background-image: -moz-linear-gradient(center bottom, #787878 0%, #5E5E5E 50%, #707070 51%, #838383 100%);
+    background-image: -o-linear-gradient(#838383 ,#707070 50%,#5E5E5E  51%,#787878);
+    background-color: #5f5f5f; /* Fallback */
+}
 
-.ft-htev-nav li:first-child {
+html[data-theme="standard"] .ft-htev-nav li:first-child {
     border-left:none;
     -webkit-border-top-left-radius: 4px;
     -moz-border-radius-topleft: 4px;
@@ -42,14 +68,24 @@ div.ft-htev-popup {
     -moz-border-radius-topright: 4px;
 }
 
+html[data-theme="simple"] .ft-htev-nav li:first-child {
+    border-left:none;
+}
+
 .ft-htev-nav li:last-child {  
     border-right:none;
 }
-.ft-htev-nav ul {
+html[data-theme="standard"] .ft-htev-nav ul {
 	-webkit-padding-start: 0px;
 	-moz-padding-start: 0px;
-	margin-top:2px !important;
-	margin-bottom:2px !important;
+	margin-top:0px !important;
+	margin-bottom:0px !important;
+}
+html[data-theme="simple"] .ft-htev-nav ul {
+	-webkit-padding-start: 0px;
+	-moz-padding-start: 0px;
+	margin-top:0px !important;
+	margin-bottom:0px !important;
 }
 .ft-htev-nav li {
 	padding-bottom: 1px !important;
