--- a/content/resources/css/ticker-coloring.css
+++ b/content/resources/css/ticker-coloring.css
@@ -12,7 +12,7 @@
 }
 
 /* login welcome */
-#ticker a[href^="/MyHattrick/Dashboard.aspx"], #ticker a[href^="/Myhattrick/Dashboard.aspx" {
+#ticker a[href^="/MyHattrick/Dashboard.aspx"], #ticker a[href^="/Myhattrick/Dashboard.aspx"] {
 	background-color: #dfefc2;
 }
 /* My Hattrick message. being after login style it should take precedence */
@@ -36,7 +36,7 @@
 	background-color: #ffdfe0;
 }
 /* guestbook */
-#ticker a[href^="/Club/Manager/Guestbook.aspx?teamId="],#ticker a[href^="/Club/Manager/Guestbook.aspx?TeamID="] {
+#ticker a[href^="/Club/Manager/Guestbook.aspx?teamId="], #ticker a[href^="/Club/Manager/Guestbook.aspx?TeamID="] {
 	background-color: #dffffd;
 }
 /* mail - full url: /MyHattrick/Inbox/Default.aspx?actionType=readMail&messageID=... */
