--- a/content/resources/css/htev-prediction.css
+++ b/content/resources/css/htev-prediction.css
@@ -10,7 +10,7 @@ html[data-theme="standard"] div.ft-htev-popup {
 	z-index: 10000;
 	list-style-type: none;
 	margin:0px;
-	padding: 3px 2px 3px 2px;
+	padding: 2px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
@@ -28,7 +28,7 @@ html[data-theme="simple"] div.ft-htev-popup {
 	z-index: 10000;
 	list-style-type: none;
 	margin:0px;
-	padding: 3px 2px 3px 2px;
+	padding: 2px;
 	font: normal .8em/1.5em Ariel, Helvetica, sans-serif;
 	background-color: #EAEAEA;
 	color: #666;	
