@093 ticker-coloring.css : Same fix as in trunk
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9773 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/ticker-coloring.css
+++ b/content/resources/css/ticker-coloring.css
@@ -12,7 +12,7 @@
 }
 
 /* login welcome */
-#ticker a[href^="/MyHattrick/Dashboard.aspx"], #ticker a[href^="/Myhattrick/Dashboard.aspx" {
+#ticker a[href^="/MyHattrick/Dashboard.aspx"], #ticker a[href^="/Myhattrick/Dashboard.aspx"] {
 	background-color: #dfefc2;
 }
 /* My Hattrick message. being after login style it should take precedence */
