htev-prediction js/css : Info text coloring was failing, fixed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9779 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/htev-prediction.css
+++ b/content/resources/css/htev-prediction.css
@@ -118,7 +118,6 @@ html[data-theme="simple"] .ft-htev-nav ul {
 	text-align: center !important;
 	padding: 0px !important;
 }
-
 .ft-htev-icon {
 	position: absolute;
 	left: -3px;
@@ -128,5 +127,8 @@ html[data-theme="simple"] .ft-htev-nav ul {
 	float: right;
 	display: block;
 	cursor: pointer;
+}
+.ft-htev-info {
+	text-align:center !important;
 }
 }
