optional permissions alert to prefs added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9815 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -290,3 +290,11 @@ html[dir="rtl"] #note
 	right: auto;
 	left: 20px;
 }
+
+#alert
+{
+	border: solid 1px orange;
+	background-color: #FCF6DF;
+	padding: 10px 150px 10px 10px;
+	display:none;
+}
