Tabs: renamed ft-tab-main to chpp-tab-main to resolve feature highlighting
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9823 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -48,11 +48,11 @@
     border-bottom: 1px solid #fff;
 }
 
-#ft-tab-main {
+#chpp-tab-main {
     margin-top: 39px !important;
 }
 
-#ft-tab-main table.naked {
+#chpp-tab-main table.naked {
     margin-top: 0px !important;
 }
 }
