tabs.js : Changed to less intrusive approach. No more containers for hattrick content.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9831 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -48,11 +48,11 @@
     border-bottom: 1px solid #fff;
 }
 
-#chpp-tab-main {
-    margin-top: 39px !important;
+table.naked {
+    margin-top: 0px !important;
 }
 
-#chpp-tab-main table.naked {
-    margin-top: 0px !important;
+#ctl00_ctl00_CPContent_CPMain_udpSpeech {
+     margin-top: 39px !important;
 }
 }
