--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -6,7 +6,7 @@
     float: left;
     width: 100%;
     padding: 0;
-    margin: 0 0 1em 0;
+    margin: 0 0 1em 0 !important;
     list-style: none;
     line-height: 1.2em;
     background: #fff;
