tabs: match-report format kinda usage
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9833 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -52,7 +52,7 @@ table.naked {
     margin-top: 0px !important;
 }
 
-#ctl00_ctl00_CPContent_CPMain_udpSpeech {
+#tab + h2, #ctl00_ctl00_CPContent_CPMain_udpSpeech {
      margin-top: 39px !important;
 }
 }
