verion renaming (to next beta number) and beta/nightly change notes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9836 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -291,10 +291,16 @@ html[dir="rtl"] #note
 	left: 20px;
 }
 
-#alert
+.alert
 {
 	border: solid 1px orange;
 	background-color: #FCF6DF;
-	padding: 10px 150px 10px 10px;
+	margin: 10px;
+	padding: 10px 10px 10px 10px;
 	display:none;
+}
+
+#alert
+{
+	padding-right: 150px
 }
