tabs : Some commit
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9837 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -49,10 +49,19 @@
 }
 
 table.naked {
-    margin-top: 0px !important;
+    margin: 0 -8px -8px !important;
 }
 
-#tab + h2, #ctl00_ctl00_CPContent_CPMain_udpSpeech {
-     margin-top: 39px !important;
+
+html[data-theme="standard"] #tab + #mails,
+html[data-theme="standard"] #tab + h2, 
+html[data-theme="standard"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
+     margin-top: 54px !important;
+}
+
+html[data-theme="simple"] #tab + #mails,
+html[data-theme="simple"] #tab + h2, 
+html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
+     margin-top: 48px !important;
 }
 }
