tabs: little styling for custom tabs
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9840 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -50,11 +50,12 @@
     border-right: 1px solid #999;
     border-bottom: 1px solid #fff;
 }
-
 table.naked {
     margin: 0 -8px -8px !important;
 }
-
+div.ft-tab-custom {
+    float:left;
+}
 
 html[data-theme="standard"] #tab + #mails,
 html[data-theme="standard"] #tab + h2, 
