--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -53,8 +53,10 @@
 table.naked {
     margin: 0 -8px -8px !important;
 }
-div.ft-tab-custom {
-    float:left;
+
+#tab + p,
+#tab + div {
+    clear:both;
 }
 
 html[data-theme="standard"] #tab + #mails,
