--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -63,7 +63,7 @@ table.naked {
     clear:both;
 }
 
-html[data-theme="standard"] #tab + #mails,
+/*html[data-theme="standard"] #tab + #mails,
 html[data-theme="standard"] #tab + h2, 
 html[data-theme="standard"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
      margin-top: 54px !important;
@@ -73,5 +73,5 @@ html[data-theme="simple"] #tab + #mails,
 html[data-theme="simple"] #tab + h2, 
 html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
      margin-top: 48px !important;
-}
+}*/
 }
