--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -63,6 +63,10 @@ table.naked {
     clear:both;
 }
 
+.tab-content .seperator {
+    display:none;
+}
+
 /*html[data-theme="standard"] #tab + #mails,
 html[data-theme="standard"] #tab + h2, 
 html[data-theme="standard"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
