--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -64,23 +64,9 @@ table.naked {
 }
 
 .ft-tab-custom,
-div.tabcontent,
+div.tab-content,
 #tab + p,
 #tab + div {
     clear:both !important;
 }
-
-
-
-/*html[data-theme="standard"] #tab + #mails,
-html[data-theme="standard"] #tab + h2, 
-html[data-theme="standard"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
-     margin-top: 54px !important;
-}
-
-html[data-theme="simple"] #tab + #mails,
-html[data-theme="simple"] #tab + h2, 
-html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_udpSpeech {
-     margin-top: 48px !important;
-}*/
 }
