tabs: Playing arround a bit with the styling, trying ideas, such stuff.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9911 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -53,6 +53,12 @@
     border-right: 1px solid #999;
     border-bottom: 1px solid #fff;
 }
+#tab a.tab-hattrick {
+    background-image: url("http://www.hattrick.org/favicon.ico");
+    background-repeat: no-repeat;
+    background-position: 3px 2px;
+    padding-left: 24px;
+}
 #tab a.ft-tab-foxtrick {
     background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png");
     background-repeat: no-repeat;
@@ -62,7 +68,6 @@
 table.naked {
     margin: 0 -8px -8px !important;
 }
-
 .ft-tab-custom,
 div.tab-content,
 #tab + p,
