trunk/0100: ft-pop: removed fix for vanishing links in rtl tables (working without now and cause problems with htev+match comments in matcheslist)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9967 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -5,10 +5,10 @@
 	display:inline;
 }
 
-/* fix for vanishing links in rtl tables*/
+/* fix for vanishing links in rtl tables (working without now and cause problems with htev+match comments in matcheslist)
 html[dir="rtl"] td .ft-popup-span {
 	display:block;
-}
+}*/
 
 html[data-theme="standard"] ul.ft-popup-list {
 	font-size: 11px;
