Load tabs.css from tabs-test module
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10035 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -12,6 +12,7 @@
     background: #fff;
     border-bottom: 1px solid #aaa;
 }
+
 #tab li
 {
     float: left;
@@ -19,6 +20,7 @@
     margin-bottom: -1px;
     padding: 0px !important; 
 }
+
 #tab img {
     float: left;
     margin-right: 4px;
@@ -38,11 +40,13 @@
     border-right: 1px solid #ccc;
     border-bottom: 1px solid #aaa;
 }
+
 #tab a:hover
 {
     background: #dce2dc;
     color: #333;
 }
+
 #tab a.active
 {
     background: #fff;
@@ -53,22 +57,41 @@
     border-right: 1px solid #999;
     border-bottom: 1px solid #fff;
 }
-#tab a.tab-hattrick, #tab a.tab-hattrick.active {
+
+#tab a.tab-hattrick {
     background-image: url("http://www.hattrick.org/favicon.ico") !important;
     background-repeat: no-repeat !important;
     background-position: 3px 2px !important;
     padding-left: 24px !important;
 }
+
+#tab a.ft-tab-hattrick.active {
+    background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png") !important;
+    background-repeat: no-repeat !important;
+    background-position: 3px 1px !important;
+    padding-left: 24px !important;
+}
+
+#tab a.ft-tab-foxtrick {
+    background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png") !important;
+    background-repeat: no-repeat !important;
+    background-position: 3px 1px !important;
+    padding-left: 24px !important;
+}
+
 #tab a.ft-tab-foxtrick, #tab a.ft-tab-hattrick.active {
     background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png") !important;
     background-repeat: no-repeat !important;
     background-position: 3px 1px !important;
     padding-left: 24px !important;
 }
+
 table.naked {
     margin: 0 -8px -8px !important;
 }
+
 #tab ~ .NTLogo{
     margin: 0px 0 20px !important; 
 }
+
 }
