tabs.css : Styling for textNodes converted to paragraphs on tab content level.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10036 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/tabs.css
+++ b/content/resources/css/tabs.css
@@ -94,4 +94,11 @@ table.naked {
     margin: 0px 0 20px !important; 
 }
 
+p.tab-content {
+    display:inline;
+}
+p.tab-content.hidden {
+    display:none;
+}
+
 }
