--- a/content/resources/css/match-order-faces.css
+++ b/content/resources/css/match-order-faces.css
@@ -1,7 +1,12 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 /* old lineup */
-.field .box_replaced.smallFaceCardBox, .field .box_highlighted.smallFaceCardBox, .field .box_lineup.smallFaceCardBox, .field .box_substitute.smallFaceCardBox {
+.field .box_highlighted.smallFaceCardBox {
+	background-image:url("chrome://foxtrick/content/resources/img/box_lineup.png") !important;
+	border: 1px solid #5f3;
+}
+
+.field .box_replaced.smallFaceCardBox, .field .box_lineup.smallFaceCardBox, .field .box_substitute.smallFaceCardBox {
 	background-image:url("chrome://foxtrick/content/resources/img/box_lineup.png") !important;
 }
 
