match-order-specialties.css : Max width for player names set for replaced and highlighted
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10063 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order-specialties.css
+++ b/content/resources/css/match-order-specialties.css
@@ -80,7 +80,7 @@ html[dir="ltr"] #field #list img.specialty {
 	left: 28px;	
 }
 
-.box_lineup.ft-specialty .name, .box_substitute.ft-specialty .name{
+.box_replaced.ft-specialty .name, .box_highlighted.ft-specialty .name, .box_lineup.ft-specialty .name, .box_substitute.ft-specialty .name{
 	max-width: 50px !important;
 }
 
