forum-mod-popup : Fixed for scroll-content and unwanted positioning when there are notification boxes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10116 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-mod-popup.css
+++ b/content/resources/css/forum-mod-popup.css
@@ -2,29 +2,29 @@
 
 html[dir="ltr"] .ft-moderator-popup-align {
 	float:right;
-	margin-right: 4px; 
+	margin-right: 10px;
 }
 html[dir="rtl"] .ft-moderator-popup-align {
 	float: left;
-	margin-left: 4px;
+	margin-left: 10px;
 }
 
 html[data-theme="simple"] .ft-moderator-popup {
 	background-color: #ffcc00;
-	position: relative; 
-	top: -28px; 
+	position: relative;
 	z-index: 99;
 	border: 1px solid black;
 	padding: 0px 8px 0px 8px;
+	margin-top: -28px ;
 }
 
 html[data-theme="standard"] .ft-moderator-popup {
 	background-color: #ffcc00;
-	position: relative; 
-	top: -33px; 
+	position: relative;
 	z-index: 99;
 	border: 1px solid black;
 	padding: 2px 8px 2px 8px;
+	margin-top: -22px;
 }
 
 }
