--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -39,10 +39,14 @@ html[data-theme="simple"] ul.ft-popup-list {
 }
 
 html[dir="ltr"] ul.ft-popup-list {
-	left:10px;
+	right: 0px;
+	left: initial;
+	left: -moz-initial;
 }
 html[dir="rtl"] ul.ft-popup-list {
-	right:10px;
+	left: 0px;
+	right: initial;
+	right: -moz-initial;
 }
 
 /* just not in messages*/
