SkillColoring: added an option to display translation in the title instead. Add some more performance fixes and comments to clear things up a little.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10138 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/skillcolors/skill-number-selectoption.css
+++ b/content/resources/skillcolors/skill-number-selectoption.css
@@ -1,4 +1,4 @@
 /* CSS Document by baumanns*/
 
 /* Option Skillnumbers */
-select[id*="Skill"][id$="Min"]>option>span, select[id*="Skill"][id$="Max"]>option>span {color: #CCC !important;}
+span.ft-tl-search-skill {color: #CCC !important;}
