@0100&trunk: HT style fix for youth matchOrder
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10153 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -32,6 +32,14 @@ html[dir="ltr"] #order_tabs {
 	margin-left: -10px !important;
 }
 
+/* add some space next to youth skill bars */
+html #skills img[class*="youthSkillBar"]{
+	margin-right: 5px !important;
+}
+html[dir="rtl"] #skills img[class*="youthSkillBar"]{
+	margin-left: 5px !important;
+}
+
 /* make space for our playedlast highlighting */
 #orders #players .player .cards_health {
 	right: 1px !important;
